fix: add mitm as it is needed in scripts
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Change-Id: Ib4484f1e371b03587db03a81529b4049b140db13
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16428
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@
         "jc",
         "jsonschema",
         "matplotlib",
+        "mitmproxy",
         "nested_lookup",
         "netaddr",
         "ouimeaux",
