fix(pyproject.toml): fix plugin path
Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Change-Id: I0a6f45b7324b4a8f530716a2bd89927020aa6550
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16882
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,8 +66,8 @@
         boardfarm = "boardfarm3.main:main"
 
     [project.entry-points."boardfarm"]
-        core    = "boardfarm.plugins.core"
-        devices = "boardfarm.plugins.devices"
+        core    = "boardfarm3.plugins.core"
+        devices = "boardfarm3.plugins.devices"
 
 [project.urls]
     Source = "https://github.com/lgirdk/boardfarm"
