build(.flake8,-pyproject.toml): introduce darglint
tool to lint docstrings. Errors (DAR*) are suppressed now, not to break.

Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Change-Id: Ibf31206ea009951de5df4d7749e1f678c855e11d
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16891
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@
             "flake8-docstrings",
             "flake8-rst",
             "flake8-rst-docstrings",
+            "darglint",
             "mypy",
             "nox",
             "pre-commit",
