--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -99,7 +99,7 @@ repos:
       hooks:
           - id: flake8
             additional_dependencies:
-                # - flake8-docstrings
+                - flake8-docstrings
                 - flake8-rst
                 - flake8-rst-docstrings
                 - flake8-bugbear
