feat(quagga): modify implementation to ubuntu
Add support for pim6sd

Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Change-Id: I5a06b96a91ac9f90baee297135a56567be3ba16e
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/17112
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/dockerfiles/quagga/Dockerfile
+++ b/dockerfiles/quagga/Dockerfile
@@ -1,56 +1,73 @@
-FROM debian_ssh_server
+FROM ubuntu_ssh_server
 
 # Install packages required for the following repositories.
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates=20200601~deb10u2 \
-    curl=7.64.0-4+deb10u2 \
-    gnupg=2.2.12-1+deb10u1
+ENV PATH "/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/sbin"
 
-# Add DVMRP daemon and monit repositories
-RUN curl -sS https://deb.troglobit.com/pubkey.gpg | apt-key add - \
-    ; echo "deb [arch=amd64] https://deb.troglobit.com/debian stable main" \
-    | tee /etc/apt/sources.list.d/troglobit.list \
-    ; echo "deb http://ftp.de.debian.org/debian buster-backports main" \
-    | tee /etc/apt/sources.list.d/buster-backports.list
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    dnsutils=1:9.11.5.P4+dfsg-5.1+deb10u6 \
-    iproute2=4.20.0-2+deb10u1 \
-    iptables=1.8.2-4 \
-    iputils-ping=3:20180629-2+deb10u2 \
-    isc-dhcp-relay=4.4.1-2+deb10u1 \
-    kmod=26-1 \
-    monit=1:5.27.1-1~bpo10+1 \
+RUN QUAGGA_BUILD_DEPS='\
+    git=1:2.25.1-1ubuntu3.5 \
+    autoconf=2.69-11.1 \
+    automake=1:1.16.1-4ubuntu6 \
+    flex=2.6.4-6.2 \
+    bison=2:3.5.1+dfsg-1 \
+    curl=7.68.0-1ubuntu2.13 \
+    ca-certificates=20211016~20.04.1 \
+    gnupg=2.2.19-3ubuntu2.2 \
+    build-essential=12.8ubuntu1' && \
+    \
+    apt-get update && apt-get install -y --no-install-recommends \
+    $QUAGGA_BUILD_DEPS && \
+    \
+    # Add DVMRP daemon and monit repositories
+    curl -sS https://deb.troglobit.com/pubkey.gpg | apt-key add - && \
+    echo "deb [arch=amd64] https://deb.troglobit.com/debian stable main" \
+    | tee /etc/apt/sources.list.d/troglobit.list && \
+    \
+    apt-get update && apt-get install -y --no-install-recommends \
+    dnsutils=1:9.16.1-0ubuntu2.10 \
+    iproute2=5.5.0-1ubuntu1 \
+    iptables=1.8.4-3ubuntu2 \
+    iputils-ping=3:20190709-3 \
+    isc-dhcp-relay=4.4.1-2.1ubuntu5.20.04.3 \
+    kmod=27-1ubuntu2.1 \
+    monit=1:5.26.0-4 \
     mrouted=4.4 \
-    net-tools=1.60+git20180626.aebd88e-1 \
-    quagga=1.2.4-3 \
-    telnet=0.17-41.2 \
-    traceroute=1:2.1.0-2 \
-    && rm -rf /var/lib/apt/lists/*
-
-# Quagga configurations
-RUN mkdir /var/run/quagga \
-    ;mkdir /var/log/quagga \
+    net-tools=1.60+git20180626.aebd88e-1ubuntu1 \
+    quagga=1.2.4-4build1 \
+    telnet=0.17-41.2build1 \
+    traceroute=1:2.1.0-2 && \
+    \
+    # Quagga configurations
+    mkdir /var/run/quagga && \
+    mkdir /var/log/quagga && \
     ## Fix "the END problem" in Quagga vtysh
-    ;echo VTYSH_PAGER=more >> /etc/environment \
+    echo VTYSH_PAGER=more >> /etc/environment && \
     ## Enable IPv6 and IPv4 forwarding
-    ;echo 'net.ipv4.conf.all.forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv4.conf.default.forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv4.conf.all.mc_forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv4.conf.default.mc_forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.all.forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.default.forwarding = 1' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.all.disable_ipv6 = 0' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.default.disable_ipv6 = 0' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.default.accept_ra = 2' >> /etc/sysctl.conf \
-    ;echo 'net.ipv6.conf.all.accept_ra = 2' >> /etc/sysctl.conf \
-    ;echo 'net.ipv4.conf.all.rp_filter = 0' >> /etc/sysctl.conf \
+    echo 'net.ipv4.conf.all.forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv4.conf.default.forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv4.conf.all.mc_forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv4.conf.default.mc_forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.all.forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.default.forwarding = 1' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.all.disable_ipv6 = 0' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.default.disable_ipv6 = 0' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.default.accept_ra = 2' >> /etc/sysctl.conf && \
+    echo 'net.ipv6.conf.all.accept_ra = 2' >> /etc/sysctl.conf && \
+    echo 'net.ipv4.conf.all.rp_filter = 0' >> /etc/sysctl.conf && \
     ## Enable vlan
-    ;echo 8021q >> /etc/modules \
-    ;ldconfig \
+    echo 8021q >> /etc/modules && \
+    ldconfig && \
     ## Set Precedence to IPv4
-    ;sed -i 's/#precedence ::ffff:0:0\/96  100/precedence ::ffff:0:0\/96  100/' /etc/gai.conf
+    sed -i 's/#precedence ::ffff:0:0\/96  100/precedence ::ffff:0:0\/96  100/' /etc/gai.conf && \
+    git clone https://github.com/troglobit/pim6sd.git && \
+    cd pim6sd/ && \
+    ./autogen.sh && \
+    ./configure && make && \
+    make install-strip && cd .. && \
+    rm -rf pim6sd && \
+    apt-get purge -y $QUAGGA_BUILD_DEPS && \
+    apt-get -y autoremove && \
+    rm -rf /var/lib/apt/lists/*
 
 # Copy Quagga Daemon configs
 COPY ripd.conf /etc/quagga/ripd.conf
@@ -67,5 +84,4 @@ RUN echo "root:bigfoot1" | chpasswd
 
 EXPOSE 22
 
-ENV PATH "/sbin:/bin:/usr/sbin:/usr/bin"
 ENTRYPOINT [ "/root/init" ]
