feat(networking.py,parsers): add linux networking components
BOARDFARM-1785

Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Change-Id: I44d390530994f6049c64608ba84cb2dc0e496db2
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/16960
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,13 @@
         "jc",
         "nested_lookup",
         "netaddr",
+        "pandas",
+        "pexpect",
         "pluggy>=1.0.0",
         "ptipython",
         "pysmi",
         "termcolor",
         "zeep",
-        "pexpect",
     ]
 
     [project.optional-dependencies]
