feat(lib,templates,linux_device.py): add dns_lookup and http_get methods required by use-cases
BOARDFARM-2368

Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Change-Id: I7f1f6d8a8d2a7d9dc3c4589aadfe7e336293e504
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/17118
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@
     requires-python = ">=3.6"
 
     dependencies = [
+        "beautifulsoup4",
         "jc",
         "nested_lookup",
         "netaddr",
