fix: change gitlab to github
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Change-Id: I56e86636b6dcf0e7737e75a89ff68a842e4a8a11
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18046
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -94,7 +94,7 @@ repos:
             description: 'Black: The uncompromising Python code formatter'
             args: [--safe]
             stages: [commit]
-    - repo: https://gitlab.com/pycqa/flake8
+    - repo: https://github.com/pycqa/flake8
       rev: 3.9.2
       hooks:
           - id: flake8
