feat(frr): moving from quagga to frr
Added support for FRRouting stack.
Updated sysctl for IPv6.

Change-Id: Ib389f82c5529f7354aa0b4918c9201a80ab20712
Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18633
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/dockerfiles/frr/zebra.conf
+++ b/dockerfiles/frr/zebra.conf
@@ -23,6 +23,7 @@ interface eth1
  ipv6 nd router-preference high
  no ipv6 nd managed-config-flag
  no ipv6 nd other-config-flag
+ multicast
 !
 !
 ! Static AFTR routes
