feat(ubuntu_asterisk): add updated sip conf
Change-Id: Ia5fbe16b1f4bbb1a7e15d816f93876e6436ad8a8
Signed-off-by: Nathuriga Sevvel <nsevvel.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18628
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
+++ b/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
@@ -1,5 +1,4 @@
 [1000]
-transport=ipv4-udp
 type=endpoint
 aors=1000
 auth=1000-auth
@@ -8,10 +7,10 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=from-internal
+context=custom-dial
 callerid=1000 <1000>
 dtmf_mode=rfc4733
-direct_media=yes
+direct_media=no
 aggregate_mwi=yes
 use_avpf=no
 rtcp_mux=no
@@ -39,7 +38,6 @@ force_rport=yes
 language=en
 
 [2000]
-transport=ipv4-udp
 type=endpoint
 aors=2000
 auth=2000-auth
@@ -48,10 +46,10 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=from-internal
+context=custom-dial
 callerid=2000 <2000>
 dtmf_mode=rfc4733
-direct_media=yes
+direct_media=no
 aggregate_mwi=yes
 use_avpf=no
 rtcp_mux=no
@@ -79,7 +77,6 @@ force_rport=yes
 language=en
 
 [3000]
-transport=ipv4-udp
 type=endpoint
 aors=3000
 auth=3000-auth
@@ -88,10 +85,10 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=from-internal
+context=custom-dial
 callerid=3000 <3000>
 dtmf_mode=rfc4733
-direct_media=yes
+direct_media=no
 aggregate_mwi=yes
 use_avpf=no
 rtcp_mux=no
@@ -119,7 +116,6 @@ force_rport=yes
 language=en
 
 [4000]
-transport=ipv4-udp
 type=endpoint
 aors=4000
 auth=4000-auth
@@ -128,10 +124,10 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=from-internal
+context=custom-dial
 callerid=4000 <4000>
 dtmf_mode=rfc4733
-direct_media=yes
+direct_media=no
 aggregate_mwi=yes
 use_avpf=no
 rtcp_mux=no
