feat: fetch jsons from a url
The inventory.json could be on a webserver. If they name starts with
    http://
    https://
the code performs a requests.get on the url.
Currently tested on "http://" only.

Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Change-Id: Iae9ab4f96b25cc0e826df0b360890aee955ff036
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18723
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@
         "pluggy>=1.0.0",
         "ptipython",
         "pysmi",
+        "requests",
         "termcolor",
         "zeep",
         "xmltodict",
