feat(pyproject.toml): update selenium version
selenium version changed to selenium>=4.3.0

BREAKING CHANGE: BOARDFARM-2784

Change-Id: Idbe632c6e4a93db3b69de36192ebf4d8c010f2e6
Signed-off-by: Nathuriga Sevvel <nsevvel.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18758
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@
         "pyvirtualdisplay==2.2",
         "requests",
         "retry",
-        "selenium==4.1.0",
+        "selenium>=4.3.0",
         "tabulate",
         "termcolor",
         "xmltodict",
