refactor(lib/interactive_shell.py,plugins/core.py): make interactive shell extensible
BOARDFARM-1895

Change-Id: I0a9ab2599ca3c98996eb46f231f667b8b43661ec
Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18808
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,7 @@
         "ptipython",
         "pysmi",
         "requests",
-        "termcolor",
-        "zeep",
+        "rich",
         "xmltodict",
     ]
 
@@ -55,7 +54,6 @@
             "pre-commit",
             "pylint",
             "types-ipaddress",
-            "types-termcolor",
             "types-requests",
         ]
         doc = ["sphinx"]
