feat(lib/interactive_shell.py): add option to run boardfarm tests from interactive shell
BOARDFARM-1895

Change-Id: If0ad61f7e871fdef1ea43c2f4ad1615c73c65082
Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/18896
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@
 
     dependencies = [
         "beautifulsoup4",
+        "importlib-metadata",
         "jc",
         "nested_lookup",
         "netaddr",
@@ -32,6 +33,7 @@
         "pluggy>=1.0.0",
         "ptipython",
         "pysmi",
+        "pytest",
         "requests",
         "rich",
         "xmltodict",
@@ -58,7 +60,6 @@
         ]
         doc = ["sphinx"]
         test = [
-            "pytest",
             "pytest-cov",
             "pytest-mock",
             "pytest-randomly",
