refactor(lib/boardfarm_config.py,pyproject.toml): use new flexible inventory schema
BOARDFARM-2855

Change-Id: I4adaf5c6fc0e19ba03a2edead5d25b7b95eac458
Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/19160
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@
         "beautifulsoup4",
         "importlib-metadata",
         "jc",
-        "nested_lookup",
+        "jsonmerge",
         "netaddr",
         "pandas",
         "pexpect",
