--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,19 @@
         "Intended Audience :: Information Technology",
         "Intended Audience :: Telecommunications Industry",
         "License :: OSI Approved :: BSD License",
-        "Programming Language :: Python :: 3",
-        "Topic :: Software Development :: Embedded Systems",
         "Topic :: Software Development :: Quality Assurance",
         "Topic :: Software Development :: Testing",
         "Topic :: Software Development :: Testing :: Acceptance",
+        "Operating System :: POSIX :: Linux",
+        "Topic :: Software Development :: Embedded Systems",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Typing :: Typed",
     ]
     dynamic = ['version', 'description']
     name = "boardfarm"
+    license = { file = "LICENSE" }
     readme = "README.md"
     requires-python = ">=3.6"
 
