--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,18 @@
         "Intended Audience :: Information Technology",
         "Intended Audience :: Telecommunications Industry",
         "License :: OSI Approved :: BSD License",
-        "Programming Language :: Python :: 3",
-        "Topic :: Software Development :: Embedded Systems",
         "Topic :: Software Development :: Quality Assurance",
         "Topic :: Software Development :: Testing",
         "Topic :: Software Development :: Testing :: Acceptance",
+        "Operating System :: POSIX :: Linux",
+        "Topic :: Software Development :: Embedded Systems",
+        "Programming Language :: Python :: 3.9",
+        "Programming Language :: Python :: 3.10",
+        "Programming Language :: Python :: 3.11",
+        "Typing :: Typed",
     ]
     dynamic = ['version', 'description']
+    license = { file = "LICENSE" }
     name = "boardfarm3"
     readme = "README.md"
     requires-python = ">=3.9"
