feat(dockerfiles/resources/): add changes to ubuntu asterisk
Enable Call Waiting and Call Forwarding

BOARDFARM-3091

Change-Id: I73a22369a7223779a8e8c3c5455a4b5f53d7e352
Signed-off-by: Nathuriga Sevvel <nsevvel.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/200
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
+++ b/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
@@ -2,6 +2,7 @@
 type=endpoint
 aors=1000
 auth=1000-auth
+transport=ipv6-udp
 tos_audio=ef
 tos_video=af41
 cos_audio=5
@@ -41,6 +42,7 @@ language=en
 type=endpoint
 aors=2000
 auth=2000-auth
+transport=ipv6-udp
 tos_audio=ef
 tos_video=af41
 cos_audio=5
@@ -80,6 +82,7 @@ language=en
 type=endpoint
 aors=3000
 auth=3000-auth
+transport=ipv4-udp
 tos_audio=ef
 tos_video=af41
 cos_audio=5
@@ -119,6 +122,7 @@ language=en
 type=endpoint
 aors=4000
 auth=4000-auth
+transport=ipv4-udp
 tos_audio=ef
 tos_video=af41
 cos_audio=5
