--- a/dockerfiles/resources/voice/freepbx_config/pjsip.transports_custom.conf
+++ b/dockerfiles/resources/voice/freepbx_config/pjsip.transports_custom.conf
@@ -1,18 +1,15 @@
+
 [ipv6-udp]
 type=transport
 protocol=udp
-bind=[2001:dead:beef:2::5]:5060
+bind=[::]:5060
 allow_reload=no
 tos=cs3
 cos=3
-external_media_address=[2001:dead:beef:2::5]
-external_signaling_address=[2001:dead:beef:2::5]
 [ipv4-udp]
 type=transport
 protocol=udp
-bind=172.25.1.5:5060
+bind=0.0.0.0:5060
 allow_reload=no
 tos=cs3
 cos=3
-external_media_address=172.25.1.5
-external_signaling_address=172.25.1.5
