feat(ubuntu_asterisk): make changes to the dockerfile
Boardfarm-3091

Change-Id: Ibacf807ae82dbb65f3fc74b9eed6b352cf8973de
Signed-off-by: Nathuriga Sevvel <nsevvel.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/645
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
+++ b/dockerfiles/resources/voice/freepbx_config/pjsip.endpoint_custom.conf
@@ -8,7 +8,7 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=custom-dial
+context=from-internal
 callerid=1000 <1000>
 dtmf_mode=rfc4733
 direct_media=no
@@ -48,7 +48,7 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=custom-dial
+context=from-internal
 callerid=2000 <2000>
 dtmf_mode=rfc4733
 direct_media=no
@@ -88,7 +88,7 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=custom-dial
+context=from-internal
 callerid=3000 <3000>
 dtmf_mode=rfc4733
 direct_media=no
@@ -128,7 +128,7 @@ tos_video=af41
 cos_audio=5
 cos_video=4
 allow=ulaw,alaw
-context=custom-dial
+context=from-internal
 callerid=4000 <4000>
 dtmf_mode=rfc4733
 direct_media=no
