--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@
             "flake8-rst",
             "flake8-rst-docstrings",
             "darglint",
-            "mypy",
+            "mypy>=1.3",
             "nox",
             "pre-commit",
             "pylint",
@@ -144,3 +144,83 @@
 
     [[tool.tbump.file]]
         src = "pyproject.toml"
+
+[tool.ruff]
+    ignore = [
+        "ANN101", # annotation of self object
+        "ANN204", # annotation of __init__()
+        "D203",
+        "D213",
+        "FBT",    # boolean trap, no clear solution
+        "N",      # naming convention, already covered by pylint
+        "PT003",  # allow scope=function to be explicitly passed to fixtures
+        "SIM114", # simplify if-elif by AND/OR combinations
+        "TD",     # would conflict with TODO highligther
+    ]
+    select = ["ALL"]
+
+
+    # Allow autofix for all enabled rules (when `--fix`) is provided.
+    fixable = [
+        "C4",
+        "COM",
+        "PIE",
+        "PT",
+        "RUF",
+        "SIM",
+        "UP",
+    ]
+
+
+    # Exclude a variety of commonly ignored directories.
+    exclude = [
+        ".bzr",
+        ".direnv",
+        ".eggs",
+        ".git",
+        ".git-rewrite",
+        ".hg",
+        ".mypy_cache",
+        ".nox",
+        ".pants.d",
+        ".pytype",
+        ".ruff_cache",
+        ".svn",
+        ".tox",
+        ".venv",
+        "__pypackages__",
+        "_build",
+        "buck-out",
+        "build",
+        "dist",
+        "node_modules",
+        "venv",
+    ]
+
+    # Same as Black.
+    line-length = 88
+
+    # Allow unused variables when underscore-prefixed.
+    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+    target-version = "py39"
+
+    unfixable = [
+        "F401", # unused imports - we must know if we forgot something...
+    ]
+    [tool.ruff.per-file-ignores]
+        "boardfarm3/lib/parsers/*" = [
+            "ALL", # parsers are to be rewritten with JC
+        ]
+        "boardfarm3/plugins/hookspecs/*" = [
+            "ARG001", # hook specs never use any argument
+        ]
+        "unittests/*" = [
+            "INP001", # pytest works this way
+            "S101",   # we do use assert in unit test written for pytest
+        ]
+
+
+    [tool.ruff.mccabe]
+        # Unlike Flake8, default to a complexity level of 10.
+        max-complexity = 10
