ci(.pre-commit-config.yaml): introduce darglint2
includes configuration file to ignore error 103 for which we have no easy solution

BOARDFARM-3417

Change-Id: I278e80fb7e73e2d11a300e46986a3b40801d6801
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/1585
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -110,6 +110,10 @@ repos:
             description: 'Black: The uncompromising Python code formatter'
             args: [--safe]
             stages: [commit]
+    - repo: https://github.com/akaihola/darglint2
+      rev: v1.8.2
+      hooks:
+          - id: darglint2
     - repo: local
       hooks:
           - id: nox
