feat(boardfarm3/plugins/devices.py): add skip-boot hook spec and hook flow in boarfarm v3 devices
referred by: Ic966820e9808931725451f3b537c4174cad406d4

BOARDFARM-3524

Change-Id: Id884e33be8d370c6de1e27363cb46816a0d74272
Signed-off-by: Akhil Chandran <achandran.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/1562
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>
Reviewed-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@
 
     [project.entry-points."boardfarm"]
         core    = "boardfarm3.plugins.core"
-        devices = "boardfarm3.plugins.devices"
+        booting = "boardfarm3.plugins.setup_environment"
 
 [project.urls]
     Source = "https://github.com/lgirdk/boardfarm"
