feat: introduce docker compose yml generator based on device json templates for docker factory payload
BOARDFARM-3837

Change-Id: Ifabee37e1afcc1659d6904efbc89671cb2840538
Signed-off-by: vsubbaram <vignesh.s1@tataelxsi.co.in>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/2072
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -97,12 +97,20 @@ repos:
       hooks:
           - id: yamlfmt
             stages: [commit]
+            exclude: |
+                (?x)^(
+                  unittests/lib/docker_factory/.*\.yml$
+                )$
     - repo: https://github.com/adrienverge/yamllint.git
       rev: v1.29.0
       hooks:
           - id: yamllint
             args: [--format, parsable, --strict]
             stages: [commit]
+            exclude: |
+                (?x)^(
+                  unittests/lib/docker_factory/.*\.yml$
+                )$
     - repo: https://github.com/psf/black
       rev: 23.1.0
       hooks:
