build(pyproject.toml): nail mitmproxy package to a version
To avoid recompiling rust and all the comes with it.

Change-Id: I9de1ff770e852a30ce38a4a5cbfc26b44fa40ad7
Signed-off-by: Michele Gualco <msalvatoregualco@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/2048
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@
         "jc",
         "jsonschema",
         "matplotlib",
-        "mitmproxy",
+        "mitmproxy==9.0.1",
         "nested_lookup",
         "netaddr",
         "ouimeaux",
