build(pyproject.toml): remove boto3, add httpx, remove boto3 code from bft.py
Change-Id: I58b8b0a8b0c32a01ccd10feecd59a909f13076f3
Signed-off-by: Filippo Carra <fcarra@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/2143
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,6 @@
         "aenum",
         "apscheduler",
         "beautifulsoup4",
-        "boto3",
         "cdrouter>=0.5.5",
         "debtcollector",
         "distro",
@@ -39,6 +38,7 @@
         "easysnmp",
         "elasticsearch<8,>=7",
         "Faker",
+        "httpx",
         "influxdb",
         "jc",
         "jsonschema",
