test(unittests/lib/test_boardfarm_config.py): implement unit tests for boardfarm lib file boardfarm/boardfarm3/lib/boardfarm_config
BOARDFARM-3830, BOARDFARM-3772

Change-Id: I56bcced5ed304b0c5fdf047e6be511727b9287b5
Signed-off-by: Akhil Chandran <achandran.contractor@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/1981
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Musthafa Kariyaparambil <mkariyaparambil.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,7 +220,11 @@
         "unittests/*" = [
             "INP001", # pytest works this way
             "S101",   # we do use assert in unit test written for pytest
-            "D103",    # doc-strings are not mandatory for unittests
+            "D103",   # doc-strings are not mandatory for unittests
+            "SLF001", # we do access private members for validation in unittests
+            "E501",   # line too long errors are ignored for unittests
+            "ANN401", # dynamically typed expressions (typing.Any) are used in arguments
+            "PLR2004" # Magic value used in comparison
         ]
 
 
