feat(pyproject.toml): register no reservation plugin on startup
BOARDFARM-4054

Change-Id: I9da0e90779ec4a61ee44ad939a54fbd4aa76a0e8
Signed-off-by: Musthafa Kariyaparambil <musthafakdml@gmail.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/3116
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@
     [project.entry-points."boardfarm"]
         core    = "boardfarm3.plugins.core"
         booting = "boardfarm3.plugins.setup_environment"
+        no_reservation = "boardfarm3.plugins.no_reservation"
 
 [project.urls]
     Source = "https://github.com/lgirdk/boardfarm"
