--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,32 @@ cython_debug/
 
 # VS Code
 .vscode/
+
+# Covers JetBrains IDE PyCharm specific template
+# GitHub Reference: https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+# JetBrains Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# AWS User-specific
+.idea/**/aws.xml
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# JIRA plugin
+atlassian-ide-plugin.xml
