feat(boardfarm/): async skip boot flow
Change-Id: I9e5d5b6eacb3b75bae503f0171f2cdfa34f5b5ef
Signed-off-by: vsubbaram <vignesh.s1@tataelxsi.co.in>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4324
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@
         "jsonmerge",
         "netaddr",
         "pandas",
-        "pexpect",
+        "pexpect>=4.9",
         "pluggy>=1.0.0",
         "ptipython",
         "pysmi",
