fix: update noxfile and add pylint plugin to dev dependency
Change-Id: Ia73fe3fb0b529459800c652132d9bb74683e7d4e
Signed-off-by: vsubbaram <vignesh.s1@tataelxsi.co.in>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4447
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>
Tested-by: Ketan Tewari <ktewari.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@
             "nox",
             "pre-commit",
             "pylint",
+            "pylint-per-file-ignores",
             "types-ipaddress",
             "types-PyYAML",
             "types-requests",
