build(.vscode/settings.json): fix settings to include isort
Change-Id: Id5901ba243c26dd75191f2fac65adc92b2abf7b3
Signed-off-by: Filippo Carra <filippo.carra@infosys.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4548
Reviewed-by: Filippo Carra <fcarra@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Vignesh Subbaram <vsubbaram.contractor@libertyglobal.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "[python]": {
-        "editor.defaultFormatter": "charliermarsh.ruff",
-        "editor.formatOnType": true
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        },
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true
     },
     "autoDocstring.docstringFormat": "sphinx",
     "black-formatter.importStrategy": "fromEnvironment",
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
-    },
     "editor.rulers": [
         36,
         78,
@@ -17,6 +17,10 @@
     "editor.suggestSelection": "first",
     "evenBetterToml.formatter.allowedBlankLines": 1,
     "evenBetterToml.formatter.columnWidth": 80,
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
     "python.terminal.activateEnvInCurrentTerminal": true,
     "python.testing.pytestEnabled": true,
     "ruff.fixAll": false,
