fix(pyproject): update easysnmp dependency
Move to easysnmp2 for MACOS compatibility

Change-Id: I6f7e80ac133709a5115c0fe6e2c326714f8f2850
Signed-off-by: Ketan Tewari <ktewari@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4557
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@
         "debtcollector",
         "distro",
         "dlipower",
-        "easysnmp",
+        "easysnmp2",
         "elasticsearch<8,>=7",
         "Faker",
         "httpx",
