ci(.pre-commit-config.yaml): pre-commit autoupdate and affected modules
BOARDFARM-4390

Change-Id: I51ad87b2b47bab733a84f18285034289851e88e5
Signed-off-by: Andrii Gavrysh <agavrysh@libertyglobal.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4846
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -186,7 +186,8 @@ ignore = [
     "PT003",  # allow scope=function to be explicitly passed to fixtures
     "SIM114", # simplify if-elif by AND/OR combinations
     "TD",     # would conflict with TODO highligther
-    "FIX002",
+    "FIX002", # we need to keep TODOs in the code
+    "E501",   # line too long ignoring
 ]
 select = ["ALL"]
 
