build(pyproject.toml): add ruff to dev dependencies
Change-Id: Idf0b7b4bdf0283fed68d7eb82eb2c5db83b7e260
Signed-off-by: Filippo Carra <filippo.carra@infosys.com>
Reviewed-on: http://10.64.38.13:8080/gerrit/c/github/boardfarm/+/4844
Reviewed-by: Michele Gualco <mgualco.contractor@libertyglobal.com>
Tested-by: Jenkins Automation <jenkins@libertyglobal.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "pre-commit",
     "pylint",
     "pylint-per-file-ignores",
+    "ruff",
     "types-ipaddress",
     "types-PyYAML",
     "types-requests",
