--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,134 +1,160 @@
 [build-system]
-    build-backend = "flit_core.buildapi"
-    requires      = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.2,<4"]
 
 [project]
-    authors = [
-        { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
-    ]
-    classifiers = [
-        "Intended Audience :: Developers",
-        "Intended Audience :: Information Technology",
-        "Intended Audience :: Telecommunications Industry",
-        "License :: OSI Approved :: BSD License",
-        "Topic :: Software Development :: Quality Assurance",
-        "Topic :: Software Development :: Testing",
-        "Topic :: Software Development :: Testing :: Acceptance",
-        "Operating System :: POSIX :: Linux",
-        "Topic :: Software Development :: Embedded Systems",
-        "Programming Language :: Python :: 3.9",
-        "Programming Language :: Python :: 3.10",
-        "Programming Language :: Python :: 3.11",
-        "Typing :: Typed",
-    ]
-    dynamic = ['version', 'description']
-    license = { file = "LICENSE" }
-    name = "boardfarm3"
-    readme = "README.md"
-    requires-python = ">=3.9"
+authors = [
+    { name = "Various", email = "t&iconnectivityboardfarm@libertyglobal.com" },
+]
+classifiers = [
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Telecommunications Industry",
+    "License :: OSI Approved :: BSD License",
+    "Topic :: Software Development :: Quality Assurance",
+    "Topic :: Software Development :: Testing",
+    "Topic :: Software Development :: Testing :: Acceptance",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: Software Development :: Embedded Systems",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Typing :: Typed",
+]
+dynamic = ['version', 'description']
+license = { file = "LICENSE" }
+name = "boardfarm3"
+readme = "README.md"
+requires-python = ">=3.9"
 
-    dependencies = [
-        "beautifulsoup4",
-        "importlib-metadata",
-        "jc",
-        "jsonmerge",
-        "netaddr",
-        "pandas",
-        "pexpect>=4.9",
-        "pluggy>=1.0.0",
-        "ptipython",
-        "pysmi",
-        "pytest",
-        "PyYAML",
-        "requests",
-        "rich",
-        "xmltodict",
-    ]
+dependencies = [
+    "beautifulsoup4",
+    "importlib-metadata",
+    "jc",
+    "jsonmerge",
+    "netaddr",
+    "pandas",
+    "pexpect>=4.9",
+    "pluggy>=1.0.0",
+    "ptipython",
+    "pysmi",
+    "pytest",
+    "PyYAML",
+    "requests",
+    "rich",
+    "xmltodict",
+]
 
-    [project.optional-dependencies]
-        dev = [
-            "black",
-            "commitizen>=2.20.0",
-            "flake8",
-            "flake8-bugbear",
-            "flake8-builtins",
-            "flake8-comprehensions",
-            "flake8-docstrings",
-            "flake8-rst",
-            "flake8-rst-docstrings",
-            "darglint",
-            "mypy>=1.3",
-            "nox",
-            "pre-commit",
-            "pylint",
-            "pylint-per-file-ignores",
-            "types-ipaddress",
-            "types-PyYAML",
-            "types-requests",
-        ]
-        doc = ["sphinx"]
-        test = [
-            "pytest-cov",
-            "pytest-mock",
-            "pytest-randomly",
-        ]
+[project.optional-dependencies]
+dev = [
+    "black",
+    "commitizen>=2.20.0",
+    "flake8",
+    "flake8-bugbear",
+    "flake8-builtins",
+    "flake8-comprehensions",
+    "flake8-docstrings",
+    "flake8-rst",
+    "flake8-rst-docstrings",
+    "darglint",
+    "mypy>=1.3",
+    "nox",
+    "pre-commit",
+    "pylint",
+    "pylint-per-file-ignores",
+    "types-ipaddress",
+    "types-PyYAML",
+    "types-requests",
+]
+doc = ["sphinx"]
+test = ["pytest-cov", "pytest-mock", "pytest-randomly"]
 
-    [project.scripts]
-        boardfarm = "boardfarm3.main:main"
+[project.scripts]
+boardfarm = "boardfarm3.main:main"
 
-    [project.entry-points."boardfarm"]
-        core    = "boardfarm3.plugins.core"
-        booting = "boardfarm3.plugins.setup_environment"
-        no_reservation = "boardfarm3.plugins.no_reservation"
+[project.entry-points."boardfarm"]
+core = "boardfarm3.plugins.core"
+booting = "boardfarm3.plugins.setup_environment"
+no_reservation = "boardfarm3.plugins.no_reservation"
 
 [project.urls]
-    Source = "https://github.com/lgirdk/boardfarm"
+Source = "https://github.com/lgirdk/boardfarm"
 
 [tool.commitizen]
-    bump_message = "Bump version to $new_version"
-    name = "cz_conventional_commits"
-    style = [
-        ["qmark", "fg:#ff9d00 bold"],
-        ["question", "bold"],
-        ["answer", "fg:#ff9d00 bold"],
-        ["pointer", "fg:#ff9d00 bold"],
-        ["highlighted", "fg:#ff9d00 bold"],
-        ["selected", "fg:#cc5454"],
-        ["separator", "fg:#cc5454"],
-        ["instruction", ""],
-        ["text", ""],
-        ["disabled", "fg:#858585 italic"],
-    ]
-    tag_format = "$version"
-    version = "2022.36.1a160"
-    version_files = [
-        "boardfarm3/__init__.py:version",
-        "pyproject.toml:version",
-        "pyproject.toml:current",
-    ]
+bump_message = "Bump version to $new_version"
+name = "cz_conventional_commits"
+style = [
+    [
+        "qmark",
+        "fg:#ff9d00 bold",
+    ],
+    [
+        "question",
+        "bold",
+    ],
+    [
+        "answer",
+        "fg:#ff9d00 bold",
+    ],
+    [
+        "pointer",
+        "fg:#ff9d00 bold",
+    ],
+    [
+        "highlighted",
+        "fg:#ff9d00 bold",
+    ],
+    [
+        "selected",
+        "fg:#cc5454",
+    ],
+    [
+        "separator",
+        "fg:#cc5454",
+    ],
+    [
+        "instruction",
+        "",
+    ],
+    [
+        "text",
+        "",
+    ],
+    [
+        "disabled",
+        "fg:#858585 italic",
+    ],
+]
+tag_format = "$version"
+version = "2022.36.1a160"
+version_files = [
+    "boardfarm3/__init__.py:version",
+    "pyproject.toml:version",
+    "pyproject.toml:current",
+]
 
 [tool.isort]
-    profile = "black"
+profile = "black"
 
 [tool.mypy]
-    disallow_untyped_defs  = true
-    ignore_missing_imports = true
-    no_strict_optional     = true
-    pretty                 = true
-    show_error_codes       = true
-    warn_redundant_casts   = true
-    warn_unreachable       = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+no_strict_optional = true
+pretty = true
+show_error_codes = true
+warn_redundant_casts = true
+warn_unreachable = true
 
 [tool.tbump]
-    # Uncomment this if your project is hosted on GitHub:
-    # github_url = "https://github.com/<user or organization>/<project>/"
-    [tool.tbump.version]
-        current = "2022.36.1a160"
+# Uncomment this if your project is hosted on GitHub:
+# github_url = "https://github.com/<user or organization>/<project>/"
+[tool.tbump.version]
+current = "2022.36.1a160"
 
-        # Example of a semver regexp.
-        # Make sure this matches current_version before
-        # using tbump
-        regex = '''
+# Example of a semver regexp.
+# Make sure this matches current_version before
+# using tbump
+regex = '''
   (?P<major>\d+)
   \.
   (?P<minor>\d+)
@@ -136,108 +162,95 @@
   (?P<patch>\d+)
   '''
 
-    [tool.tbump.git]
-        message_template = "Bump to {new_version}"
-        tag_template     = "{new_version}"
+[tool.tbump.git]
+message_template = "Bump to {new_version}"
+tag_template = "{new_version}"
 
-    # For each file to patch, there is a [[tool.tbump.file]] config
-    # section containing the path of the file, relative to the
-    # pyproject.toml location.
-    [[tool.tbump.file]]
-        src = "boardfarm3/__init__.py"
+# For each file to patch, there is a [[tool.tbump.file]] config
+# section containing the path of the file, relative to the
+# pyproject.toml location.
+[[tool.tbump.file]]
+src = "boardfarm3/__init__.py"
 
-    [[tool.tbump.file]]
-        src = "pyproject.toml"
+[[tool.tbump.file]]
+src = "pyproject.toml"
 
 [tool.ruff]
-    ignore = [
-        "ANN101", # annotation of self object
-        "ANN204", # annotation of __init__()
-        "D203",
-        "D213",
-        "FBT",    # boolean trap, no clear solution
-        "N",      # naming convention, already covered by pylint
-        "PT003",  # allow scope=function to be explicitly passed to fixtures
-        "SIM114", # simplify if-elif by AND/OR combinations
-        "TD",     # would conflict with TODO highligther
-    ]
-    select = ["ALL"]
+ignore = [
+    "ANN101", # annotation of self object
+    "ANN204", # annotation of __init__()
+    "D203",
+    "D213",
+    "FBT",    # boolean trap, no clear solution
+    "N",      # naming convention, already covered by pylint
+    "PT003",  # allow scope=function to be explicitly passed to fixtures
+    "SIM114", # simplify if-elif by AND/OR combinations
+    "TD",     # would conflict with TODO highligther
+]
+select = ["ALL"]
 
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["C4", "COM", "PIE", "PT", "RUF", "SIM", "UP"]
 
-    # Allow autofix for all enabled rules (when `--fix`) is provided.
-    fixable = [
-        "C4",
-        "COM",
-        "PIE",
-        "PT",
-        "RUF",
-        "SIM",
-        "UP",
-    ]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
 
+# Same as Black.
+line-length = 88
 
-    # Exclude a variety of commonly ignored directories.
-    exclude = [
-        ".bzr",
-        ".direnv",
-        ".eggs",
-        ".git",
-        ".git-rewrite",
-        ".hg",
-        ".mypy_cache",
-        ".nox",
-        ".pants.d",
-        ".pytype",
-        ".ruff_cache",
-        ".svn",
-        ".tox",
-        ".venv",
-        "__pypackages__",
-        "_build",
-        "buck-out",
-        "build",
-        "dist",
-        "node_modules",
-        "venv",
-    ]
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-    # Same as Black.
-    line-length = 88
+target-version = "py39"
 
-    # Allow unused variables when underscore-prefixed.
-    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+unfixable = [
+    "F401", # unused imports - we must know if we forgot something...
+]
+[tool.ruff.per-file-ignores]
+"boardfarm3/lib/parsers/*" = [
+    "ALL", # parsers are to be rewritten with JC
+]
+"boardfarm3/plugins/hookspecs/*" = [
+    "ARG001", # hook specs never use any argument
+]
+"unittests/*" = [
+    "INP001",  # pytest works this way
+    "S101",    # we do use assert in unit test written for pytest
+    "D103",    # doc-strings are not mandatory for unittests
+    "SLF001",  # we do access private members for validation in unittests
+    "E501",    # line too long errors are ignored for unittests
+    "ANN401",  # dynamically typed expressions (typing.Any) are used in arguments
+    "PLR2004", # Magic value used in comparison
+]
 
-    target-version = "py39"
-
-    unfixable = [
-        "F401", # unused imports - we must know if we forgot something...
-    ]
-    [tool.ruff.per-file-ignores]
-        "boardfarm3/lib/parsers/*" = [
-            "ALL", # parsers are to be rewritten with JC
-        ]
-        "boardfarm3/plugins/hookspecs/*" = [
-            "ARG001", # hook specs never use any argument
-        ]
-        "unittests/*" = [
-            "INP001", # pytest works this way
-            "S101",   # we do use assert in unit test written for pytest
-            "D103",   # doc-strings are not mandatory for unittests
-            "SLF001", # we do access private members for validation in unittests
-            "E501",   # line too long errors are ignored for unittests
-            "ANN401", # dynamically typed expressions (typing.Any) are used in arguments
-            "PLR2004" # Magic value used in comparison
-        ]
-
-
-    [tool.ruff.mccabe]
-        # Unlike Flake8, default to a complexity level of 10.
-        max-complexity = 10
+[tool.ruff.mccabe]
+# Unlike Flake8, default to a complexity level of 10.
+max-complexity = 10
 
 [tool.pylint.MASTER]
-    load-plugins=[
-        "pylint_per_file_ignores",
-    ]
+load-plugins = ["pylint_per_file_ignores"]
 
 [tool.pylint-per-file-ignores]
-    "/unittests/"="R0903,C0116,C0103,W0613"
+"/unittests/" = "R0903,C0116,C0103,W0613"
